--- a/web/pagination/pagination_demo.html
+++ b/web/pagination/pagination_demo.html
@@ -5,24 +5,67 @@ https://github.com/akserg/angular.dart.ui
 All rights reserved.  Please see the LICENSE.md file.
 -->
 <div pagination-ctrl>
-    <h3>Data</h3>
-    <div class="row">
-        {{ctrl.currentPage}}
+    <h4>Default</h4>
 
+    <div class="row">
+        <div class="col-sm-4">
+            <pagination total-items="ctrl.totalItems" page="ctrl.currentPage"
+                        on-select-page="ctrl.pageChanged()"></pagination>
+        </div>
     </div>
     <div class="row">
-        <input type="number" ng-model="ctrl.totalItems"/>
+        <div class="col-sm-4">
+            <pagination boundary-links="true" total-items="ctrl.totalItems" page="ctrl.currentPage"
+                        class="pagination-sm" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;"
+                        last-text="&raquo;"></pagination>
+        </div>
     </div>
     <div class="row">
-        {{totalPages}}
+        <div class="col-sm-4">
+            <pagination direction-links="false" boundary-links="true" total-items="ctrl.totalItems"
+                        page="ctrl.currentPage"></pagination>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-4">
+            <pagination direction-links="false" total-items="ctrl.totalItems" page="ctrl.currentPage"
+                        num-pages="smallnumPages"></pagination>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-4">
+            <pre>The selected page no: {{ctrl.currentPage}}</pre>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-4">
+            <button class="btn btn-info" ng-click="ctrl.setPage(3)">Set current page to: 3</button>
+        </div>
+    </div>
 
+    <hr/>
+    <h4>Pager</h4>
+
+    <div class="row">
+        <div class="col-sm-4">
+            <pager total-items="ctrl.totalItems" page="ctrl.currentPage"></pager>
+        </div>
     </div>
 
-    <h3>Static</h3>
+    <hr/>
+    <h4>Limit the maximum visible buttons</h4>
+
     <div class="row">
-        <div class="col-sm-4"><pager total-items="ctrl.totalItems" items-per-page="ctrl.itemsPerPage" num-pages="totalPages" ng-model="ctrl.currentPage"></pager></div>
+        <div class="col-sm-4">
+            <pagination total-items="ctrl.bigTotalItems" page="ctrl.bigCurrentPage" max-size="ctrl.maxSize"
+                        class="pagination-sm" boundary-links="true"></pagination>
+        </div>
     </div>
     <div class="row">
-        <div class="col-sm-4"><pagination total-items="ctrl.totalItems" items-per-page="ctrl.itemsPerPage" num-pages="totalPages" ng-model="ctrl.currentPage"></pagination></div>
+        <div class="col-sm-4">
+            <pagination total-items="ctrl.bigTotalItems" page="ctrl.bigCurrentPage" max-size="ctrl.maxSize"
+                        class="pagination-sm" boundary-links="true" rotate="false" num-pages="numPages"></pagination>
+        </div>
     </div>
+    <pre>Page: {{ctrl.bigCurrentPage}} / {{numPages}}</pre>
 </div>
