--- a/web/grid/grid_demo.html
+++ b/web/grid/grid_demo.html
@@ -5,5 +5,9 @@ https://github.com/akserg/angular.dart.ui
 All rights reserved.  Please see the LICENSE.md file.
 -->
 <div grid-demo-controller>
-  <table tr-ng-grid items="gridCtrl.myItems"></table>
+  <table tr-ng-grid items="gridCtrl.myItems" class="table-bordered" selected-items="gridCtrl.selectedItems"></table>
+  <hr>
+<!--   <table tr-ng-grid items="gridCtrl.selectedItems" class="table-bordered"></table> -->
+  <hr> <!--  enable-selection="false" -->
+  <div>{{gridCtrl.selectedItems}}</div>
 </div>
