--- a/web/index.html
+++ b/web/index.html
@@ -37,9 +37,9 @@ All rights reserved.  Please see the LICENSE.md file.
     <div ng-include="datepicker/datepicker_demo.html"></div>
     <hr>
     
-    <h3>Modal Window</h3>
-    <div ng-include="modal/modal_demo.html"></div>
-    <hr>
+<!--     <h3>Modal Window</h3> -->
+<!--     <div ng-include="modal/modal_demo.html"></div> -->
+<!--     <hr> -->
     
     <h3>Rating</h3>
     <div ng-include="rating/rating_demo.html"></div>
