--- a/web/grid/grid_demo.html
+++ b/web/grid/grid_demo.html
@@ -5,9 +5,52 @@ https://github.com/akserg/angular.dart.ui
 All rights reserved.  Please see the LICENSE.md file.
 -->
 <div grid-demo-controller>
-  <table sm-ng-grid items="gridCtrl.myItems" class="table-bordered" selected-items="gridCtrl.selectedItems"></table>
+
+  <table sm-ng-grid items="gridCtrl.myItems" class="table-bordered" selected-items="gridCtrl.selectedItems">
+    <thead>
+      <tr>
+        <!--Define the columns with individual header elements-->
+        <th field-name="userName">
+          <div class="sm-ng-sort"></div>
+          <div class="sm-ng-filter">
+            <input class="form-control input-sm" type="text">
+          </div>
+          <span class="tr-ng-title">Name</span>
+        </th>
+        <th>Between</th>
+        <th field-name="id"/>
+        <th/>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td field-name="userName">Prs: {{gridItem.userName}}</td>
+        <td class="text-center">{{gridItem.userName + '!!!'}}</td>
+        <td field-name="id"></td>
+        <td>More info id:{{gridItem.id}}</td>
+      </tr>
+    </tbody>
+  </table>
   <hr>
-  <table sm-ng-grid items="gridCtrl.selectedItems" class="table-bordered"></table>
-  <hr>
-  <div>{{gridCtrl.selectedItems}}</div>
+
+
+                        
+  <!-- Grids with template -->
+<!--   <table sm-ng-grid items="gridCtrl.myItems" class="table-bordered" selected-items="gridCtrl.selectedItems"> -->
+<!--     <thead> -->
+<!--       <tr> -->
+<!--         Define the columns with individual TH elements -->
+<!--         <th field-name="userName"/> -->
+<!--         <th field-name="id"/> -->
+<!--       </tr> -->
+<!--     </thead> -->
+<!--   </table> -->
+<!--   <hr> -->
+  
+      <!-- Self defined grids -->
+<!--   <table sm-ng-grid items="gridCtrl.myItems" class="table-bordered" selected-items="gridCtrl.selectedItems"></table> -->
+<!--   <hr> -->
+<!--   <table sm-ng-grid items="gridCtrl.selectedItems" class="table-bordered"></table> -->
+<!--     <ht> -->
+<!--     <div>{{gridCtrl.selectedItems}}</div>   -->
 </div>
