--- a/lib/accordion/accordion_group.html
+++ b/lib/accordion/accordion_group.html
@@ -7,7 +7,8 @@ All rights reserved.  Please see the LICENSE.md file.
 <div class="panel panel-default">
   <div class="panel-heading">
     <h4 class="panel-title">
-      <a class="accordion-toggle" ng-click="ctrl.isOpen = !ctrl.isOpen"><content select="accordion-heading"></content>{{ctrl.heading}}
+      <a class="accordion-toggle" ng-click="ctrl.isOpen = !ctrl.isOpen">
+        <accordion-heading-transclude parent-accordion-group-component="ctrl"></accordion-heading-transclude>
       </a>
     </h4>
   </div>
