--- a/lib/accordion/accordion_group.html
+++ b/lib/accordion/accordion_group.html
@@ -8,7 +8,7 @@ All rights reserved.  Please see the LICENSE.md file.
   <div class="panel-heading">
     <h4 class="panel-title">
       <a class="accordion-toggle" ng-click="ctrl.isOpen = !ctrl.isOpen">
-        <accordion-heading-transclude parent-accordion-group-component="ctrl"></accordion-heading-transclude>
+        <content-append node="ctrl.heading"></content-append>
       </a>
     </h4>
   </div>
