--- a/lib/tabs/tabset.html
+++ b/lib/tabs/tabset.html
@@ -7,7 +7,7 @@ All rights reserved.  Please see the LICENSE.md file.
 <div class="tabbable">
   <ul class="nav nav-{{tabsetCtrl.type}}" ng-class="{'nav-stacked': tabsetCtrl.vertical, 'nav-justified': tabsetCtrl.justified}">
     <li ng-repeat="tab in tabsetCtrl.tabs" ng-class="{active: tab.active, disabled: tab.disabled}">
-      <a ng-click="tabsetCtrl.select(tab)"><tab-heading-transclude tab="tab"></tab-heading-transclude></a>
+      <a ng-click="tabsetCtrl.select(tab)"><content-append node="tab.heading"></content-append></a>
     </li>
   </ul>
   <div class="tab-content">
