--- a/lib/carousel/carousel.html
+++ b/lib/carousel/carousel.html
@@ -6,7 +6,7 @@ All rights reserved.  Please see the LICENSE.md file.
 -->
 <div ng-mouseenter='c.pause()' ng-mouseleave='c.play()' class='carousel'>
   <ol class='carousel-indicators' ng-show='c.slides.length > 1'>
-    <li ng-repeat='slide in c.slides' ng-class='{active: c.isActive(slide)}' ng-click='c.select(slide)'></li>
+    <li ng-repeat='item in c.slides' ng-class='{active: c.isActive(item)}' ng-click='c.select(item)'></li>
   </ol>
   <div class='carousel-inner'><content></content></div>
   <a class='left carousel-control' ng-click='c.prev()' ng-show='c.slides.length > 1'><span class='icon-prev'></span></a>
