--- a/web/carousel/carousel_demo.html
+++ b/web/carousel/carousel_demo.html
@@ -7,11 +7,11 @@ All rights reserved.  Please see the LICENSE.md file.
 <div ng-controller="carousel-demo-ctrl">
   <div style="height: 305px">
     <carousel interval="ctrl.myInterval * 1000">
-      <slide ng-repeat="slide in ctrl.slides" active="slide['active']">
-        <img ng-src="{{slide['image']}}" style="margin:auto;">
+      <slide ng-repeat="item in ctrl.slides" active="item['active']">
+        <img ng-src="{{item['image']}}" style="margin:auto;">
         <div class="carousel-caption">
           <h4>Slide {{$index}}</h4>
-          <p>{{slide['text']}}</p>
+          <p>{{item['text']}}</p>
         </div>
       </slide>
     </carousel>
