--- a/web/index.html
+++ b/web/index.html
@@ -10,6 +10,7 @@ All rights reserved.  Please see the LICENSE.md file.
     <title>Angular dart ui</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="packages/angular_ui/css/angular.css">
+    <link rel="stylesheet" href="packages/angular_ui/carousel/slide.css">
     <link rel="stylesheet" href="main.css">
   </head>
   <body ng-cloak>
