--- a/web/modal/modal_demo.html
+++ b/web/modal/modal_demo.html
@@ -39,6 +39,16 @@ All rights reserved.  Please see the LICENSE.md file.
 </div>
 
 <div class="panel panel-default">
+  <div class="panel-heading">Modal from template string with q <b>static</b> backdrop</div>
+  <div class="panel-body">
+    <div modal-static-ctrl-tmpl>
+      <button class="btn btn-default" ng-click="ctrl.open()">Open me!</button>
+      <div ng-show="ctrl.selected != null">Selected: {{ ctrl.selected }}</div>
+    </div>
+  </div>
+</div>
+
+<div class="panel panel-default">
   <div class="panel-heading">Multi Modal from template element and template URL</div>
   <div class="panel-body">
     <div modal-ctrl-tag-tmpl>
