--- a/lib/modal/window.html
+++ b/lib/modal/window.html
@@ -6,7 +6,7 @@ All rights reserved.  Please see the LICENSE.md file.
 -->
 <div tabindex="-1" class="modal {{ m.windowClass }}" ng-class="{in: {{m.visible}}}"
     ng-style="{'z-index': '{{1050 + index*10}}', 'display': 'block'}" ng-click="m.close($event)">
-    <div class="modal-dialog">
+    <div class="modal-dialog {{ m.sizeClass }}">
       <div class="modal-content">
         <content></content>
       </div>
