--- a/web/buttons/buttons_demo.html
+++ b/web/buttons/buttons_demo.html
@@ -4,26 +4,26 @@ Copyright (C) 2013 - 2014 Angular Dart UI authors. Please see AUTHORS.md.
 https://github.com/akserg/angular.dart.ui
 All rights reserved.  Please see the LICENSE.md file.
 -->
-<div buttons-ctrl>
+<div>
   <h4>Single toggle</h4>
-  <pre>{{ctrl.singleModel}}</pre>
-  <button type="button" class="btn btn-primary" ng-model="ctrl.singleModel" btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0">
+  <pre>{{singleModel}}</pre>
+  <button type="button" class="btn btn-primary" ng-model="singleModel" btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0">
       Single Toggle
   </button>
 
   <h4>Checkbox</h4>
-  <pre>{{ctrl.leftModel}} - {{ctrl.middleModel}} - {{ctrl.rightModel}}</pre>
+  <pre>{{leftModel}} - {{middleModel}} - {{rightModel}}</pre>
   <div class="btn-group">
-      <button type="button" class="btn btn-primary" ng-model="ctrl.leftModel" btn-checkbox>Left</button>
-      <button type="button" class="btn btn-primary" ng-model="ctrl.middleModel" btn-checkbox>Middle</button>
-      <button type="button" class="btn btn-primary" ng-model="ctrl.rightModel" btn-checkbox>Right</button>
+      <button type="button" class="btn btn-primary" ng-model="leftModel" btn-checkbox>Left</button>
+      <button type="button" class="btn btn-primary" ng-model="middleModel" btn-checkbox>Middle</button>
+      <button type="button" class="btn btn-primary" ng-model="rightModel" btn-checkbox>Right</button>
   </div>
 
   <h4>Radio</h4>
-  <pre>{{ctrl.radioModel}}</pre>
+  <pre>{{radioModel}}</pre>
   <div class="btn-group">
-      <button type="button" class="btn btn-primary" ng-model="ctrl.radioModel" btn-radio="'Left'">Left</button>
-      <button type="button" class="btn btn-primary" ng-model="ctrl.radioModel" btn-radio="'Middle'">Middle</button>
-      <button type="button" class="btn btn-primary" ng-model="ctrl.radioModel" btn-radio="'Right'">Right</button>
+      <button type="button" class="btn btn-primary" ng-model="radioModel" btn-radio="'Left'">Left</button>
+      <button type="button" class="btn btn-primary" ng-model="radioModel" btn-radio="'Middle'">Middle</button>
+      <button type="button" class="btn btn-primary" ng-model="radioModel" btn-radio="'Right'">Right</button>
   </div>
 </div>
