--- a/web/modal/modal_demo_template_element.html
+++ b/web/modal/modal_demo_template_element.html
@@ -19,7 +19,7 @@ All rights reserved.  Please see the LICENSE.md file.
   Other Selected: <b>{{ctrl.other}}</b>
   <hr>
   <div modal-ctrl-other-tmpl ng-model="ctrl.other">
-    <a ng-click="ctrl2.open('modal/modal_window2.html')">Open other Modal Window</a>
+    <a ng-click="ctrl2.open('modal/modal_demo_template_from_other_file.html')">Open other Modal Window</a>
   </div>
 </div>
 <div class="modal-footer">
@@ -29,41 +29,11 @@ All rights reserved.  Please see the LICENSE.md file.
 </script>
 
 <div class="panel panel-default">
-  <div class="panel-heading">Modal from template string</div>
-  <div class="panel-body">
-    <div modal-ctrl-tmpl>
-      <button class="btn btn-default" ng-click="ctrl.open()">Open me!</button>
-      <div ng-show="ctrl.selected != null">Selected: {{ ctrl.selected }}</div>
-    </div>
-  </div>
-</div>
-
-<div class="panel panel-default">
-  <div class="panel-heading">Modal from template string with q <b>static</b> backdrop</div>
-  <div class="panel-body">
-    <div modal-static-ctrl-tmpl>
-      <button class="btn btn-default" ng-click="ctrl.open()">Open me!</button>
-      <div ng-show="ctrl.selected != null">Selected: {{ ctrl.selected }}</div>
-    </div>
-  </div>
-</div>
-
-<div class="panel panel-default">
   <div class="panel-heading">Multi Modal from template element and template URL</div>
   <div class="panel-body">
     <div modal-ctrl-tag-tmpl>
       <button class="btn btn-default" ng-click="ctrl.open('template_2.html')">Open me!</button>
       <div ng-show="ctrl.selected != null">Selected: {{ ctrl.selected + ' - ' + ctrl.other }}</div>
-    </div>
-  </div>
-</div>
-
-<div class="panel panel-default">
-  <div class="panel-heading">Modal from template file</div>
-  <div class="panel-body">
-    <div modal-ctrl-file-tmpl>
-      <button class="btn btn-default" ng-click="ctrl.open('modal/modal_window.html')">Open me!</button>
-      <div ng-show="ctrl.selected != null">Selected: {{ ctrl.selected }}</div>
     </div>
   </div>
 </div>
