--- a/web/modal/modal_demo_template_from_file.html
+++ b/web/modal/modal_demo_template_from_file.html
@@ -10,13 +10,13 @@ All rights reserved.  Please see the LICENSE.md file.
 </div>
 <div class="modal-body">
   <ul>
-    <li ng-repeat="item in ctrl.items">
-      <a ng-click="ctrl.tmp = item">{{ item }}</a>
+    <li ng-repeat="item in ctrl1.items">
+      <a ng-click="ctrl1.tmp = item">{{ item }}</a>
     </li>
   </ul>
-  Selected: <b>{{ctrl.tmp}}</b>
+  Selected: <b>{{ctrl1.tmp}}</b>
 </div>
 <div class="modal-footer">
   <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-  <button type="button" class="btn btn-primary" ng-click="ctrl.ok(ctrl.tmp)">OK</button>
+  <button type="button" class="btn btn-primary" ng-click="ctrl1.ok(ctrl1.tmp)">OK</button>
 </div>
