--- a/web/dragdrop/dragdrop_demo.html
+++ b/web/dragdrop/dragdrop_demo.html
@@ -5,173 +5,12 @@ https://github.com/akserg/angular.dart.ui
 All rights reserved.  Please see the LICENSE.md file.
 -->
 <div>
-  <h4>Drag And Drop - Shopping basket</h4>
-  <div class="row" dd-shopping-demo-controller>
-  - {{value}} -
+  <div dd-shopping-demo-controller></div>
+
+  <div dd-list-demo-controller></div>
   
-    <div ng-if="valid">
-    valid
-    </div>
-    <div ng-if="!valid">
-    not valid
-    </div>
-    
-    <div class="col-sm-3">
-      <div class="panel panel-success">
-        <div class="panel-heading">Available products</div>
-        <div class="panel-body">
-          <div ng-repeat="product in shoppingCtrl.availableProducts" class="panel panel-default"
-            ui-draggable draggable-enabled="product.quantity>0" draggable-data="product" on-drag-success="shoppingCtrl.orderedProduct(product)" allowed-drop-zones="'demo1'">
-            <div class="panel-body">
-              <div ng-show="product.quantity>0">{{product.name}} - ${{product.cost}} (available: {{product.quantity}})</div>
-              <div ng-hide="product.quantity>0"><del>{{product.name}}</del> (NOT available)</div>
-            </div>
-          </div>        
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-3">
-      <div ui-droppable on-drop-success="shoppingCtrl.addToBasket(data)" drop-zones="'demo1'" class="panel panel-info">
-        <div class="panel-heading">Shopping Basket (to pay: ${{shoppingCtrl.totalCost()}})</div>
-        <div class="panel-body">
-          <div ng-repeat="product in shoppingCtrl.shoppingBasket" class="panel panel-default">
-            <div class="panel-body">
-              {{product.name}} (ordered: {{product.quantity}} cost: ${{product.cost * product.quantity}})
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <h4>Drag And Drop - Move from list to list</h4>
-  <div class="row" dd-list-demo-controller>
-    <div class="col-sm-3">
-      <div class="panel panel-warning" 
-      ui-droppable on-drop-success="listCtrl.add(listCtrl.todoList, data)" drop-zones="'demo2'">
-        <div class="panel-heading">To Do</div>
-        <div class="panel-body">
-          <div ng-repeat="item in listCtrl.todoList" class="panel panel-default"
-            ui-draggable draggable-data="item" on-drag-success="listCtrl.remove(listCtrl.todoList, item)" allowed-drop-zones="'demo2'">
-            <div class="panel-body">
-              {{item}}
-            </div>
-          </div>        
-        </div>
-      </div>
-    </div>
-
-    <div class="col-sm-3">
-      <div class="panel panel-info" ui-droppable on-drop-success="listCtrl.add(listCtrl.ongoingList, data)" drop-zones="'demo2'">
-        <div class="panel-heading">Ongoing</div>
-        <div class="panel-body">
-          <div ng-repeat="item in listCtrl.ongoingList" class="panel panel-default"
-            ui-draggable draggable-data="item" on-drag-success="listCtrl.remove(listCtrl.ongoingList, item)" allowed-drop-zones="'demo2'">
-            <div class="panel-body">
-              {{item}}
-            </div>
-          </div>        
-        </div>
-      </div>
-    </div>
-
-    <div class="col-sm-3">
-      <div class="panel panel-success" ui-droppable on-drop-success="listCtrl.add(listCtrl.doneList, data)" drop-zones="'demo2'">
-        <div class="panel-heading">Done</div>
-        <div class="panel-body">
-          <div ng-repeat="item in listCtrl.doneList" class="panel panel-default"
-            ui-draggable draggable-data="item" on-drag-success="listCtrl.remove(listCtrl.doneList, item)" allowed-drop-zones="'demo2'">
-            <div class="panel-body">
-              {{item}}
-            </div>
-          </div>        
-        </div>
-      </div>
-    </div>    
-  </div>
+  <div dd-custom-image-demo-controller></div>
   
-  <h4>Drag And Drop - Custom Drag Image</h4>
-  <p><i>Note: custom drag images are not supported in IE9/IE10.</i></p>
-  <div class="row" dd-custom-image-demo-controller>
-
-    <div class="col-sm-3">
-      <div class="panel panel-info">
-        <div class="panel-heading">Drag me</div>
-        <div class="panel-body">
-          <div class="panel panel-default"
-            ui-draggable="customImageCtrl.dragdropConfig" allowed-drop-zones="'demo3'">
-            <div class="panel-body">
-              I show a custom image on drag
-            </div>
-          </div>        
-        </div>
-      </div>
-    </div>
-
-    <div class="col-sm-3">
-      <div class="panel panel-success" ui-droppable drop-zones="'demo3'">
-        <div class="panel-heading">Drop here</div>
-        <div class="panel-body">
-        </div>
-      </div>
-    </div>    
-  </div>
-  
-  <h4>Drag And Drop - Use multiple drop-zones</h4>
-  <div class="row">
-     <div class="col-sm-2">
-      <div class="panel panel-info">
-        <div class="panel-heading">I can drop only in zone <b>ONE</b></div>
-        <div class="panel-body">
-          <div class="panel panel-default"
-            ui-draggable allowed-drop-zones="'demo4-zone-one'">
-            <div class="panel-body">
-              Drag me
-            </div>
-          </div>        
-        </div>
-      </div>
-    </div>
-     <div class="col-sm-2">
-      <div class="panel panel-info">
-        <div class="panel-heading">I can drop only in zone <b>TWO</b></div>
-        <div class="panel-body">
-          <div class="panel panel-default"
-            ui-draggable allowed-drop-zones="'demo4-zone-two'">
-            <div class="panel-body">
-              Drag me
-            </div>
-          </div>        
-        </div>
-      </div>
-    </div>
-     <div class="col-sm-2">
-      <div class="panel panel-info">
-        <div class="panel-heading">I can drop in both zone <b>ONE</b> or <b>TWO</b></div>
-        <div class="panel-body">
-          <div class="panel panel-default"
-            ui-draggable allowed-drop-zones="['demo4-zone-one','demo4-zone-two']">
-            <div class="panel-body">
-              Drag me
-            </div>
-          </div>        
-        </div>
-      </div>
-    </div>    
-    <div class="col-sm-2">
-      <div class="panel panel-success" ui-droppable drop-zones="'demo4-zone-one'">
-        <div class="panel-heading">Drop Zone <b>ONE</b></div>
-        <div class="panel-body">
-        </div>
-      </div>
-    </div> 
-    <div class="col-sm-2">
-      <div class="panel panel-success" ui-droppable drop-zones="'demo4-zone-two'">
-        <div class="panel-heading">Drop Zone <b>TWO</b></div>
-        <div class="panel-body">
-        </div>
-      </div>
-    </div> 
-  </div>
+  <div dd-multidropzones-demo-controller></div>
 
 </div>
