--- a/web/index.html
+++ b/web/index.html
@@ -88,9 +88,9 @@ All rights reserved.  Please see the LICENSE.md file.
 <!--     <div ng-include="progressbar/progressbar_demo.html"></div> -->
 <!--     <hr> -->
     
-    <h3>Buttons</h3>
-    <buttons-demo></buttons-demo>
-    <hr>
+<!--         <h3>Buttons</h3> -->
+<!--         <buttons-demo></buttons-demo> -->
+<!--         <hr> -->
     
 <!--     <h3>Tabs</h3> -->
 <!--     <div ng-include="tabs/tabs_demo.html"></div> -->
